feat: typoscript refactoring

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -14,7 +14,8 @@ nfs_mount_enabled: false
 mutagen_enabled: false
 use_dns_when_possible: true
 composer_version: "2"
-web_environment: []
+web_environment:
+  - TYPO3_CONTEXT=Development/Local
 
 # Key features of ddev's config.yaml:
 
@@ -82,7 +83,7 @@ web_environment: []
 # Please take care with this because it can cause great confusion.
 
 # upload_dir: custom/upload/dir
-# would set the destination path for ddev import-files to <docroot>/custom/upload/dir 
+# would set the destination path for ddev import-files to <docroot>/custom/upload/dir
 
 # working_dir:
 #   web: /var/www/html
