--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "typo3/cms-base-distribution": "^9.5",
     "gridelementsteam/gridelements": "^9.0",
     "blueways/bw-placeholder-images": "1.0.3",
-    "georgringer/news": "^7.0"
+    "georgringer/news": "^7.0",
+    "blueways/deployer-recipes": "^2.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest"
