feat: upgrade to v11

--- a/composer.json
+++ b/composer.json
@@ -10,35 +10,35 @@
     }
   ],
   "require": {
-    "typo3/cms-about": "^10.4",
-    "typo3/cms-adminpanel": "^10.4",
-    "typo3/cms-backend": "^10.4",
-    "typo3/cms-belog": "^10.4",
-    "typo3/cms-beuser": "^10.4",
-    "typo3/cms-core": "^10.4",
-    "typo3/cms-dashboard": "^10.4",
-    "typo3/cms-extbase": "^10.4",
-    "typo3/cms-extensionmanager": "^10.4",
-    "typo3/cms-filelist": "^10.4",
-    "typo3/cms-fluid": "^10.4",
-    "typo3/cms-fluid-styled-content": "^10.4",
-    "typo3/cms-form": "^10.4",
-    "typo3/cms-frontend": "^10.4",
-    "typo3/cms-impexp": "^10.4",
-    "typo3/cms-info": "^10.4",
-    "typo3/cms-install": "^10.4",
-    "typo3/cms-lowlevel": "^10.4",
-    "typo3/cms-opendocs": "^10.4",
-    "typo3/cms-recordlist": "^10.4",
-    "typo3/cms-redirects": "^10.4",
-    "typo3/cms-reports": "^10.4",
-    "typo3/cms-rte-ckeditor": "^10.4",
-    "typo3/cms-scheduler": "^10.4",
-    "typo3/cms-seo": "^10.4",
-    "typo3/cms-setup": "^10.4",
-    "typo3/cms-tstemplate": "^10.4",
-    "typo3/cms-viewpage": "^10.4",
-    "gridelementsteam/gridelements": "^10.0",
+    "typo3/cms-about": "^11.4",
+    "typo3/cms-adminpanel": "^11.4",
+    "typo3/cms-backend": "^11.4",
+    "typo3/cms-belog": "^11.4",
+    "typo3/cms-beuser": "^11.4",
+    "typo3/cms-core": "^11.4",
+    "typo3/cms-dashboard": "^11.4",
+    "typo3/cms-extbase": "^11.4",
+    "typo3/cms-extensionmanager": "^11.4",
+    "typo3/cms-filelist": "^11.4",
+    "typo3/cms-fluid": "^11.4",
+    "typo3/cms-fluid-styled-content": "^11.4",
+    "typo3/cms-form": "^11.4",
+    "typo3/cms-frontend": "^11.4",
+    "typo3/cms-impexp": "^11.4",
+    "typo3/cms-info": "^11.4",
+    "typo3/cms-install": "^11.4",
+    "typo3/cms-lowlevel": "^11.4",
+    "typo3/cms-opendocs": "^11.4",
+    "typo3/cms-recordlist": "^11.4",
+    "typo3/cms-redirects": "^11.4",
+    "typo3/cms-reports": "^11.4",
+    "typo3/cms-rte-ckeditor": "^11.4",
+    "typo3/cms-scheduler": "^11.4",
+    "typo3/cms-seo": "^11.4",
+    "typo3/cms-setup": "^11.4",
+    "typo3/cms-tstemplate": "^11.4",
+    "typo3/cms-viewpage": "^11.4",
+    "gridelementsteam/gridelements": "dev-master",
     "georgringer/news": "^9.0",
     "blueways/deployer-recipes": "^2.0",
     "blueways/bw-placeholder-images": "dev-master"
